--- a/asg10-geomapping/Spain_Population_Density_D3_V5.html
+++ b/asg10-geomapping/Spain_Population_Density_D3_V5.html
@@ -7,7 +7,8 @@
     <!-- CSS Stylesheet -->
     <link rel="stylesheet" type="text/css" href="Spain_Population_Density_D3_V5.css">
     <!-- D3.js Source -->
-    <script type="text/javascript" src="https://d3js.org/d3.v5.min.js"></script><script type="text/javascript" src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+    <script type="text/javascript" src="https://d3js.org/d3.v5.min.js"></script>
+    <script type="text/javascript" src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
     <script type="text/javascript" src="https://d3js.org/topojson.v2.min.js"></script>
     <script src="https://unpkg.com/d3-composite-projections"></script>
     </head>
@@ -38,7 +39,7 @@
         </ul>-->
         
         <br>
-        <a href="https://github.com/hli086/ucsc/tree/master/spring2020/cse163/asg10-geomapping">GitHub repository of this visualization</a>
+        <a href="https://github.com/hli086/ucsc-spring2020-cse163/tree/master/asg10-geomapping">GitHub repository of this visualization</a>
         
         <h4> Sources: </h4>
         <ul>
