--- a/asg12-enhancement-project/asg12_ca_immigration.html
+++ b/asg12-enhancement-project/asg12_ca_immigration.html
@@ -21,7 +21,8 @@
                 <div class="slider_div" id="stacked_area_chart_slider"></div>
             </div>
             <div class="container" id="pie_chart"></div>
-            <div class="desc_div" id = "chart_description">
+            <div class="desc_div" id="chart_description">
+                <p class="inst_div"><u>Zoom</u> on a specific time frame through <u>brushing</u>. Highlight a specific group by <u>hovering the legend</u>. Double click to unzoom.</p>
                 <p>Immigration events have shaped the influx of immigrants into California.
                 In 1850s, European immigrants flowed into California.
                 1882 Chinese Exclusion Act suspended immigration of laborers from China.
