--- a/asg12-enhancement-project/asg12_ca_immigration.html
+++ b/asg12-enhancement-project/asg12_ca_immigration.html
@@ -22,6 +22,7 @@
             </div>
             <div class="container" id="pie_chart"></div>
             <div class="desc_div" id="chart_description">
+                <p>Features to be added: Pie chart animation, pie chart tooltip, event timeline</p>
                 <p class="inst_div"><u>Zoom</u> on a specific time frame through <u>brushing</u>. Highlight a specific group by <u>hovering the legend</u>. Double click to unzoom.</p>
                 <p>Immigration events have shaped the influx of immigrants into California.
                 In 1850s, European immigrants flowed into California.
