--- a/asg12-enhancement-project/asg12_ca_immigration.html
+++ b/asg12-enhancement-project/asg12_ca_immigration.html
@@ -9,8 +9,6 @@
         <!-- D3.js Source -->
         <script type= "text/javascript" src="https://d3js.org/d3.v5.min.js"></script>
         <script type= "text/javascript" src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
-        <script type= "text/javascript" src="d3.tip.v0.6.3.js"></script>
-        <!--<script type="text/javascript" src="lib/d3.slider/d3.slider.js"></script>-->
     </head>
     <body>
         <h1>Immigration into California, 1850-2010</h1>
@@ -91,6 +89,7 @@
         <a href="https://stackoverflow.com/questions/23272040/align-lines-of-text-to-center-in-svg">Align lines of text to center in SVG</a><br>
         <a href="https://stackoverflow.com/questions/23189358/starting-transitions-and-animations-with-area-graph-in-d3-js">Starting Transitions and Animations With Area Graph in D3.JS</a><br>
         <a href="https://bl.ocks.org/cflavs/ff1c6005fd7edad32641">Tooltip Pie Chart</a><br>
+        <a href="https://bl.ocks.org/mbostock/1346410">Pie Chart Update, II</a><br>
         
 
 
